# foolgame

./: .gitignore  CMakeLists.txt  README.md  main.cpp
components/: Card.cpp  Card.h  Controller.cpp  Controller.h  Deck.cpp  Deck.h  Exceptions.h  GameState.cpp  GameState.h  Heuristics.cpp  Heuristics.h  Model.cpp  Model.h  Node.cpp  Node.h  Predictor.cpp  Predictor.h  UnoBot.cpp  UnoBot.h  UnoGameEngine.cpp  UnoGameEngine.h  UnoRules.h  View.cpp  View.h
state/: structs.h
tree/: funcs.h  structs.h  tree.cpp
